--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
-    "del-cli": "^4.0.1",
+    "@fortawesome/angular-fontawesome": "^0.11.1",
     "cross-env": "^7.0.3",
+    "del-cli": "^4.0.1",
     "jest": "^27.5.1",
     "supertest": "^6.2.2"
   }
